#193 Fix new layout on tablet

--- a/templates/jc/less/template/subsites/subsite_nieuws.less
+++ b/templates/jc/less/template/subsites/subsite_nieuws.less
@@ -52,11 +52,6 @@
 		background: @white;
 		border-radius: @border-radius-base;
 
-		@media (min-width: @screen-sm) {
-			margin: -@grid-gutter-width*3 - @grid-gutter-width/2 0 - @grid-gutter-width/2;
-			padding: @grid-gutter-width/2 @grid-gutter-width/2 0 @grid-gutter-width/2;
-		}
-
 		@media (min-width: @screen-md) {
 			margin: -@grid-gutter-width*3 -@grid-gutter-width 0 -@grid-gutter-width;
 			padding: @grid-gutter-width @grid-gutter-width 0 @grid-gutter-width;
